# plrt-conus

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  plrt-conus.code-workspace  pyproject.toml  requirements.txt  rsync_data_dirs.sh  setup.cfg
aggregated_results/: basin_comp_metrics.feather  best_model_op_groups.feather  best_model_op_groups.pickle  equations.tex  res_group_access.csv
aggregated_results/new_parameter_sweep/: simmed_nnse_nrmse.pickle  simmed_nnse_rmse.pickle
aggregated_results/parameter_sweep/: longterm_3_simmed_nnse.pickle  metrics.pickle  monthly_3_simmed_nnse.pickle  simmed_nnse_rmse.pickle
config/: units.json
data/: grand_names.feather  trimmed_resers.pickle
data/spatial_data/: huc2_names.csv  res_huc2.feather  updated_res_huc2.feather
data/to_sync/: left_out_mb.feather  noncon_trim_res.pickle
notes/: notes.md
python_scripts/: analysis_plots.py  basin_comparisons.py  data_prep_analysis.py  explore_res_variables.py  fit_plrt_model.py  make_map_grid.py  make_resopsus_meta_data.py  make_resopsus_model_ready.py  match_res_to_wbd.py  parameter_sweep_analysis.py  prep_resopsus.py  single_tree_breakdown.py
python_scripts/data_prep/: make_resopsus_model_ready.py  prep_resopsus.py
python_scripts/model_setup_files/: test_train_basin_0.8.pickle  test_train_basin_1.0.pickle  test_train_conus_meta_max_sto_-0.2.pickle  test_train_conus_meta_max_sto_-0.4.pickle  test_train_conus_meta_max_sto_-0.6.pickle  (+45 more)
shell_scripts/: convert_dot_to_png.sh  fix_dirs.sh  model_runner.sh  parameter_sweep.sh  rsync_data_dirs.sh  runner_args.txt
(+293 files in other folders)
