[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\\.pyi?$'
exclude = '''
/(
   \\.git
 | \\.hg
 | \\.mypy_cache
 | \\.tox
 | \\.venv
 | _build
 | buck-out
 | build
 | dist
)/
'''

[tool.ruff]
ignore = ["E402", "N803", "N806"]
line-length = 88
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # flake8 quotes
    "Q",
    # flake8 commas
    "COM",
    # flake8 comprehensions
    "C4",
]


[tool.poetry]
name = "plrt-conus"
version = "0.1.2"
description = "Piecewise Linear Regression Tree for reservoirs in CONUS"
authors = ["Lucas Ford <lcford2@ncsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
contourpy = "1.0.6"
cycler = "0.11.0"
fonttools = "4.38.0"
joblib = "1.2.0"
kiwisolver = "1.4.4"
matplotlib = "3.6.2"
numpy = "1.24.0"
packaging = "22.0"
pandas = "1.5.2"
pillow = "9.3.0"
py-plrt = {path = "../plrt"}
pyarrow = "10.0.1"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
pytz = "2022.7"
scikit-learn = "1.2.0"
scipy = "1.10.0rc1"
seaborn = "0.12.1"
six = "1.16.0"
tabulate = "0.9.0"
threadpoolctl = "3.1.0"
geopandas = "^0.12.2"
ruff = "^0.0.258"
flake8-to-ruff = "^0.0.233"
pre-commit = "^3.2.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.9.0"
isort = "^5.12.0"
black = "^22.12.0"
flake8 = "^6.0.0"
ipdb = "^0.13.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
